--- a/lab_1_JZS/Lab1.Rmd
+++ b/lab_1_JZS/Lab1.Rmd
@@ -62,10 +62,10 @@ permitted_data_df = sf_trees %>%
 ```{r}
 blackwood_acacia_df = sf_trees %>% 
   filter(str_detect(species, "Blackwood Acacia")) %>% 
-  select(legal_status, date, lat = latitude, long = longitude)
+  select(legal_status, date, lat = latitude, lon = longitude)
 
 # make a graph of locations
-ggplot(data = blackwood_acacia_df, aes(x = long, y = lat)) +
+ggplot(data = blackwood_acacia_df, aes(x = lon, y = lat)) +
   geom_point(color = 'darkgreen')
 ```
 
@@ -82,5 +82,52 @@ sf_trees_sep = sf_trees %>%
 ```{r}
 ex_5 = sf_trees %>% 
   unite('id_status', tree_id, legal_status)
+```
+
+### Part 2 : Make some maps
+
+**Step 1:** Convert lat/lon to spatial point, `st_as_sf()`
+
+```{r}
+blackwood_acacia_sf = blackwood_acacia_df %>% 
+  drop_na(lat, lon) %>% 
+  st_as_sf(coords = c('lon', 'lat'))
+
+# tell r coordinate system
+st_crs(blackwood_acacia_sf) = 4326
+
+ggplot(data = blackwood_acacia_sf) +
+  geom_sf(color = "darkgreen") +
+  theme_minimal()
+```
+
+Read in SF shapefile and add to map
+
+```{r}
+sf_map = read_sf(here('data', 'sf_map', 'tl_2017_06075_roads.shp'))
+
+sf_map_transform = st_transform(sf_map, 4326)
+
+ggplot(data = sf_map_transform) +
+  geom_sf()
+```
+
+Combine the maps!
+
+```{r}
+ggplot() + 
+  geom_sf(data = sf_map, size = .1, color = 'darkgrey') +
+  geom_sf(data = blackwood_acacia_sf, color = 'red', size = .5) + 
+  theme_void() + 
+  labs(title = "Blackwood Acacias SF")
+```
+
+### NOw an interactive map
+
+```{r}
+tmap_mode('view')
+
+tm_shape(blackwood_acacia_sf) +
+  tm_dots()
 ```
 
